added garden howto